# tenant-flow

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/auth/: routes.py
backend/app/api/invitation/: routes.py
backend/app/api/member/: deps.py  routes.py
backend/app/api/project/: deps.py  routes.py
backend/app/api/task/: deps.py  routes.py
backend/app/api/tenant/: deps.py  routes.py
backend/app/api/user/: routes.py
backend/app/core/: config.py  db.py  deps.py  loggin.py  security.py
backend/app/models/: invitation.py  membership.py  project.py  task.py  tenant.py  user.py
backend/app/schemas/: auth.py  invitation.py  mail.py  membership.py  pagination.py  project.py  task.py  tenant.py  user.py
backend/app/services/auth/: auth.py
backend/app/services/invitation/: invitation.py
backend/app/services/member/: member.py
backend/app/services/project/: project.py
backend/app/services/task/: task.py
backend/app/services/tenant/: tenant.py
backend/app/services/user/: user.py
backend/app/signals/: invitations.py
backend/app/utils/: hash.py  helpers.py  mails.py  validators.py
backend/tests/: conftest.py  helper.py  test_auth.py  test_member.py  test_project.py  test_tenant.py  test_user.py
frontend/: base.jsx  index.html  package-lock.json  package.json
frontend/src/: index.css  main.jsx
frontend/src/api/: auth-api.js  client.js  invitation-api.js  membership-api.js  (+4 more)
(+60 files in other folders)
